# DeadManSwitch

./: README.md
DeadManSwitch/: Cargo.toml
DeadManSwitch/src/: actions.rs  config.rs  error.rs  main.rs  ui.rs
DeadManSwitch/src/triggers/: flic.rs  mod.rs  network.rs  telegram.rs  timer.rs  usb.rs
