[package]
name = "DeadManSwitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simplelog = "0.10.0"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.24", features = ["rt-multi-thread", "macros"] }
whoami = "1.1.1"
iced = "0.4.2"
clap = { version = "4.0.32", features = ["derive"] }
rusb = "0.9.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wingdi","winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.18.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
core-graphics = "0.22.2"
objc = "0.2"

[dependencies.tokio-stream]
version = "0.1.15"
features = ["sync"]